After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743718 - Fix the build if dbus-glib is not installed
Fix the build if dbus-glib is not installed
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-29 22:21 UTC by David King
Modified: 2015-02-04 20:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (727 bytes, patch)
2015-01-29 22:22 UTC, David King
committed Details | Review

Description David King 2015-01-29 22:21:18 UTC
There is a stray include in gsm-manager.h, which breaks the build if dbus-glib is not available.
Comment 1 David King 2015-01-29 22:22:16 UTC
Created attachment 295783 [details] [review]
proposed patch
Comment 2 David King 2015-01-29 22:54:04 UTC
Successful Rawhide build of gnome-session including the change:

http://koji.fedoraproject.org/koji/taskinfo?taskID=8774514
Comment 3 Ray Strode [halfline] 2015-02-04 16:38:41 UTC
Review of attachment 295783 [details] [review]:

push push push
Comment 4 David King 2015-02-04 20:39:02 UTC
Review of attachment 295783 [details] [review]:

Pushed to master as 511986798d0803879d87f298c796d2593cc03ddf.