manager: Drop unnecessary dbus-glib include

Fix the build when dbus-glib is not available.

https://bugzilla.gnome.org/show_bug.cgi?id=743718